Overflow Fixes

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ body {
   color: var(--color-body);
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 .dark {
   --color-white: #1a1a1a;
